--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "nodejs",
+  "name": "proxy-zapier",
   "version": "1.0.0",
-  "description": "",
+  "type": "module",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@types/node": "^22.13.11"
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
+    "body-parser": "^1.20.2"
   }
 }
